# avalanche

./: pyproject.toml
M1/Lesson_01/Lab1/: M1Lab1_solution.ipynb
M1/Lesson_02/: M1L2V2_starting.py
M1/Lesson_03/: M1L3V1_starting.py
M1/Lesson_03/Lab2/: M1Lab2_starting.py
