[tool.poetry]
name = "fast-prototyping-of-genai-apps-with-streamlit"
version = "0.1.0"
description = ""
authors = ["chhk <chorhatarahuduketuri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = {extras = ["snowflake"], version = "^1.49.1"}
pandas = "^2.3.2"
plotly = "^6.3.0"
openai = "^1.102.0"
python-dotenv = "^1.1.1"
snowflake-snowpark-python = "^1.37.0"
matplotlib = "^3.10.6"
numpy = "^2.3.2"
altair = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
